tests/code/pass/pass_assignment.u
entrypoint: ~()->(iErrorCode:~i64{1})
{
	foo:~i64{42};
	
	foo := 65;
	
	iErrorCode := foo;
}
