tests/code/fail/fail_duplicate_variable_name.u
entrypoint: ~()->(i64{1})
{
	foo:i64{1};
	foo:i64{2};
}